ラウンド関係、total record関係のマークアップをしました。

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -5,3 +5,6 @@
 @import "devise/new";
 @import "devise/log-in";
 @import "player/player_new";
+@import "round/round_new";
+@import "round/round_score";
+@import "total_record_new";
