--- a/app/views/fourth_rounds/score.html.haml
+++ b/app/views/fourth_rounds/score.html.haml
@@ -1,93 +1,209 @@
-.round-score-wrap
-  4回線
-  ユーザー名：
-  = current_user.nickname
-  %br
-  選手名：
-  = @player.name
-  %br
-  = "#{@player.dominant_throw}投#{@player.dominant_batting}打"
-  %br
-  ポジション：
-  = @position
-  %br
-  レベル：
-  = @level
-
-%br
-.round-score-top
-  試合前設定
-  .round-score-top__opponent
-    相手チーム：
-    = @round.opponent
-  .round-score-top__manager
-    マネージャー：
-    = @supporter
-  .round-score-top__horisugi
-    堀杉くん人形：
-    = @round.horisugi_doll
-  .round-score-top__climate
-    天気：
-    = @round.climate
-%br
-.round-score-score
-  試合内容
-  = form_with url: record_player_fourth_rounds_path, method: :post, id: "4th-game-data" do |f|
-    出場回：
-    = f.select :take_part_in, @participation, {}, {id: "participation", class: "game-data"}
-    得失点差：
-    = f.number_field :point_difference, id: "point_difference", class: "game-data", value: 0
-    失点：
-    = f.number_field :lost_point, id: "lost_point", class: "game-data", value: 0, min: 0
-    ヒット：
-    = f.number_field :hit, id: "hit", class: "game-data", value: 0, min: 0
-    二塁打：
-    = f.number_field :second_base_hit, id: "second_base_hit", class: "game-data", value: 0, min: 0
-    三塁打：
-    = f.number_field :third_base_hit, id: "third_base_hit", class: "game-data", value: 0, min: 0
-    本塁打：
-    = f.number_field :home_run, id: "home_run", class: "game-data", value: 0, min: 0
-    犠打：
-    = f.number_field :sacrifice_bunt, id: "sacrifice_bunt", class: "game-data", value: 0, min: 0
-    犠飛：
-    = f.number_field :sacrifice_fly, id: "sacrifice_fly", class: "game-data", value: 0, min: 0
-    盗塁：
-    = f.number_field :steal, id: "steal", class: "game-data", value: 0, min: 0
-    登板回数：
-    = f.number_field :pitch, id: "pitch", class: "game-data", value: 0, min: 0
-    ストレート系アウト：
-    = f.number_field :straight_ball_out, id: "straight_ball_out", class: "game-data", value: 0, min: 0
-    変化球系アウト：
-    = f.number_field :change_ball_out, id: "change_ball_out", class: "game-data", value: 0, min: 0
-    奪三振：
-    = f.number_field :strike_out, id: "strike_out", class: "game-data", value: 0, min: 0
-    フライ／ライナーアウト：
-    = f.number_field :fly_liner_out, id: "fly_liner_out", class: "game-data", value: 0, min: 0
-    ゴロアウト：
-    = f.number_field :roller, id: "roller", class: "game-data", value: 0, min: 0
-    併殺：
-    = f.number_field :double_play, id: "double_play", class: "game-data", value: 0, min: 0
-    - if @supporter == "我間摩夕"
-      お言いつけ
-      = f.select :wagama_order, {}, {id: "wagama_order", class: "game-data"} do
-        %option 成功
-        %option 失敗
-    .get-point
-      獲得ポイント
-      .get-point__muscle
-        筋力ポイント
-        = f.text_field :muscle, id: "muscle-point", value: 0, min: 0
-      .get-point__agile
-        敏捷ポイント
-        = f.text_field :agile, id: "agile-point", value: 0, min: 0
-      .get-point__technique
-        技術ポイント
-        = f.text_field :technique, id: "technique-point", value: 0, min: 0
-      .get-point__change
-        変化球ポイント
-        = f.text_field :change, id: "change-point", value: 0, min: 0
-      .get-point__spirit
-        精神ポイント
-        = f.text_field :spirit, id: "spirit-point", value: 0, min: 0
-      .game-max
-    = f.submit :"試合終了"
+.wrapper
+  .wrapper__top
+    .wrapper__top__box
+      .wrapper__top__box__text
+        パワフェス " 極 "
+        .wrapper__top__box__text__sub
+          〜最強選手を作ろう〜
+  .wrapper__back
+    .wrapper__back__content
+      .wrapper__back__content__top
+        〜 4回戦　設定情報 〜
+      .wrapper__back__content__center
+        .wrapper__back__content__center__left
+          .wrapper__back__content__center__left__title
+            選手情報
+          .wrapper__back__content__center__left__player
+            .wrapper__back__content__center__left__player__regi
+              .wrapper__back__content__center__left__player__regi__text
+                選手名
+              .wrapper__back__content__center__left__player__regi__center
+                ：
+              .wrapper__back__content__center__left__player__regi__data
+                = @player.name
+            .wrapper__back__content__center__left__player__regi
+              .wrapper__back__content__center__left__player__regi__text
+                ポジション
+              .wrapper__back__content__center__left__player__regi__center
+                ：
+              .wrapper__back__content__center__left__player__regi__data
+                = @player.position
+            .wrapper__back__content__center__left__player__regi
+              .wrapper__back__content__center__left__player__regi__text
+                投打
+              .wrapper__back__content__center__left__player__regi__center
+                ：
+              .wrapper__back__content__center__left__player__regi__data
+                = "#{@player.dominant_throw}投　#{@player.dominant_throw}打"
+            .wrapper__back__content__center__left__player__regi
+              .wrapper__back__content__center__left__player__regi__text
+                レベル
+              .wrapper__back__content__center__left__player__regi__center
+                ：
+              .wrapper__back__content__center__left__player__regi__data
+                = @player.level
+        .wrapper__back__content__center__right
+          .wrapper__back__content__center__right__title
+            試合前設定
+          .wrapper__back__content__center__right__player
+            .wrapper__back__content__center__right__player__regi
+              .wrapper__back__content__center__right__player__regi__text
+                相手チーム
+              .wrapper__back__content__center__right__player__regi__center
+                ：
+              .wrapper__back__content__center__right__player__regi__data
+                = @round.opponent
+            .wrapper__back__content__center__right__player__regi
+              .wrapper__back__content__center__right__player__regi__text
+                マネージャー
+              .wrapper__back__content__center__right__player__regi__center
+                ：
+              .wrapper__back__content__center__right__player__regi__data
+                = @supporter
+            .wrapper__back__content__center__right__player__regi
+              .wrapper__back__content__center__right__player__regi__text
+                マネージャーの機嫌
+              .wrapper__back__content__center__right__player__regi__center
+                ：
+              .wrapper__back__content__center__right__player__regi__data
+                = @round.supporter_mood
+            .wrapper__back__content__center__right__player__regi
+              .wrapper__back__content__center__right__player__regi__text
+                堀杉くん人形
+              .wrapper__back__content__center__right__player__regi__center
+                ：
+              .wrapper__back__content__center__right__player__regi__data
+                = @round.horisugi_doll
+            .wrapper__back__content__center__right__player__regi
+              .wrapper__back__content__center__right__player__regi__text
+                天候
+              .wrapper__back__content__center__right__player__regi__center
+                ：
+              .wrapper__back__content__center__right__player__regi__data
+                = @round.climate
+    .wrapper__back__content
+      .wrapper__back__content__top
+        〜 試合成績入力 〜
+      = form_with url: record_player_fourth_rounds_path, method: :post, id: "4th-game-data" do |f|
+        .wrapper__back__content__top__box3
+          .wrapper__back__content__top__box3__left
+            .wrapper__back__content__top__box3__left__title
+              総合
+            .wrapper__back__content__top__box3__left__form
+              .wrapper__back__content__top__box3__left__form__text
+                出場回
+              = f.select :take_part_in, @participation, {}, {id: "participation", class: "game-data"}
+            .wrapper__back__content__top__box3__left__form
+              .wrapper__back__content__top__box3__left__form__text
+                得失点差
+              = f.number_field :point_difference, id: "point_difference", class: "game-data", value: 0
+            .wrapper__back__content__top__box3__left__form
+              .wrapper__back__content__top__box3__left__form__text
+                失点
+              = f.number_field :lost_point, id: "lost_point", class: "game-data", value: 0
+            - if @supporter == "我間摩夕"
+              .wrapper__back__content__top__box3__left__form
+                .wrapper__back__content__top__box3__left__form__text
+                  お言いつけ
+                = f.select :wagama_order, {}, {id: "wagama_order", class: "game-data"} do
+                  %option 成功
+                  %option 失敗
+          .wrapper__back__content__top__box3__center
+            .wrapper__back__content__top__box3__center__title
+              野手
+            .wrapper__back__content__top__box3__center__form
+              .wrapper__back__content__top__box3__center__form__text
+                ヒット
+              = f.number_field :hit, id: "hit", class: "game-data", value: 0, min: 0
+            .wrapper__back__content__top__box3__center__form
+              .wrapper__back__content__top__box3__center__form__text
+                二塁打
+              = f.number_field :second_base_hit, id: "second_base_hit", class: "game-data", value: 0, min: 0
+            .wrapper__back__content__top__box3__center__form
+              .wrapper__back__content__top__box3__center__form__text
+                三塁打
+              = f.number_field :third_base_hit, id: "third_base_hit", class: "game-data", value: 0, min: 0
+            .wrapper__back__content__top__box3__center__form
+              .wrapper__back__content__top__box3__center__form__text
+                本塁打
+              = f.number_field :home_run, id: "home_run", class: "game-data", value: 0, min: 0
+            .wrapper__back__content__top__box3__center__form
+              .wrapper__back__content__top__box3__center__form__text
+                犠打
+              = f.number_field :sacrifice_bunt, id: "sacrifice_bunt", class: "game-data", value: 0, min: 0
+            .wrapper__back__content__top__box3__center__form
+              .wrapper__back__content__top__box3__center__form__text
+                犠飛
+              = f.number_field :sacrifice_fly, id: "sacrifice_fly", class: "game-data", value: 0, min: 0
+            .wrapper__back__content__top__box3__center__form
+              .wrapper__back__content__top__box3__center__form__text
+                盗塁
+              = f.number_field :steal, id: "steal", class: "game-data", value: 0, min: 0
+          .wrapper__back__content__top__box3__right
+            .wrapper__back__content__top__box3__right__title
+              投手
+            .wrapper__back__content__top__box3__center__form
+              .wrapper__back__content__top__box3__center__form__text
+                登板回数
+              = f.number_field :pitch, id: "pitch", class: "game-data", value: 0, min: 0
+            .wrapper__back__content__top__box3__center__form
+              .wrapper__back__content__top__box3__center__form__text
+                ストレート系アウト
+              = f.number_field :straight_ball_out, id: "straight_ball_out", class: "game-data", value: 0, min: 0
+            .wrapper__back__content__top__box3__center__form
+              .wrapper__back__content__top__box3__center__form__text
+                変化球系アウト
+              = f.number_field :change_ball_out, id: "change_ball_out", class: "game-data", value: 0, min: 0
+            .wrapper__back__content__top__box3__center__form
+              .wrapper__back__content__top__box3__center__form__text
+                奪三振
+              = f.number_field :strike_out, id: "strike_out", class: "game-data", value: 0, min: 0
+            .wrapper__back__content__top__box3__center__form
+              .wrapper__back__content__top__box3__center__form__text
+                フライ／ライナーアウト
+              = f.number_field :fly_liner_out, id: "fly_liner_out", class: "game-data", value: 0, min: 0
+            .wrapper__back__content__top__box3__center__form
+              .wrapper__back__content__top__box3__center__form__text
+                ゴロアウト
+              = f.number_field :roller, id: "roller", class: "game-data", value: 0, min: 0
+            .wrapper__back__content__top__box3__center__form
+              .wrapper__back__content__top__box3__center__form__text
+                併殺
+              = f.number_field :double_play, id: "double_play", class: "game-data", value: 0, min: 0
+          .wrapper__back__content__top__box3__mostright
+            .wrapper__back__content__top__box3__mostright__title
+              獲得ポイント
+            .wrapper__back__content__top__box3__mostright__form
+              #max-muscle-point
+              .wrapper__back__content__top__box3__mostright__form__text
+                筋力ポイント
+              = f.text_field :muscle, id: "muscle-point", class: "game-data", value: 0, min: 0, readonly: "readonly"
+            .wrapper__back__content__top__box3__mostright__form
+              #max-agile-point
+              .wrapper__back__content__top__box3__mostright__form__text
+                敏捷ポイント
+              = f.text_field :agile, id: "agile-point", class: "game-data", value: 0, min: 0, readonly: "readonly"
+            .wrapper__back__content__top__box3__mostright__form
+              #max-technique-point
+              .wrapper__back__content__top__box3__mostright__form__text
+                技術ポイント
+              = f.text_field :technique, id: "technique-point", class: "game-data", value: 0, min: 0, readonly: "readonly"
+            .wrapper__back__content__top__box3__mostright__form
+              #max-change-point
+              .wrapper__back__content__top__box3__mostright__form__text
+                変化球ポイント
+              = f.text_field :change, id: "change-point", class: "game-data", value: 0, min: 0, readonly: "readonly"
+            .wrapper__back__content__top__box3__mostright__form
+              #max-spirit-point
+              .wrapper__back__content__top__box3__mostright__form__text
+                精神ポイント
+              = f.text_field :spirit, id: "spirit-point", class: "game-data", value: 0, min: 0, readonly: "readonly"
+            .wrapper__back__content__top__box3__mostright__text
+              試合状況
+            .wrapper__back__content__top__box3__mostright__result#result
+              　　
+        .wrapper__back__content__top__submit
+          = f.submit :"試合終了", class: "finish-game-button"
+  .wrapper__restback
+    %br
+    %br
