users#methodの画像を変更しました。

--- a/app/views/users/method.html.haml
+++ b/app/views/users/method.html.haml
@@ -30,7 +30,7 @@
               %br
               3.　ポジションを選択
           .wrapper__back__content__inner__box__img
-            = image_tag "/sample.jpg", class: "sample"
+            = image_tag "/画像1.png", class: "sample"
         .wrapper__back__content__inner__box
           .wrapper__back__content__inner__box__text
             .wrapper__back__content__inner__box__text__title
@@ -44,7 +44,7 @@
               %br
               4.　お助けアイテム(堀杉くんアイテム)の有無を選択
           .wrapper__back__content__inner__box__img
-            = image_tag "/sample.jpg", class: "sample"
+            = image_tag "/画像2.png", class: "sample"
         .wrapper__back__content__inner__box
           .wrapper__back__content__inner__box__text
             .wrapper__back__content__inner__box__text__title
@@ -84,7 +84,7 @@
                   %br
                   ※引き分けは敗退扱いになります
           .wrapper__back__content__inner__box__img
-            = image_tag "/sample.jpg", class: "sample"
+            = image_tag "/画像3.png", class: "sample"
         .wrapper__back__content__inner__bottom
           勝ち続ければ5戦連続で画面１〜３を繰り返す
         .wrapper__back__content__inner__box
@@ -94,7 +94,7 @@
             .wrapper__back__content__inner__box__text__content
               最終獲得ポイントの確認
           .wrapper__back__content__inner__box__img
-            = image_tag "/sample.jpg", class: "sample"
+            = image_tag "/画像4.png", class: "sample"
       .wrapper__back__content__button
         = link_to root_path, class: "return_home" do
           ホームに戻る
