total_recordのnew.html.hamlに誤りがあったため修正しました。

--- a/app/views/total_records/new.html.haml
+++ b/app/views/total_records/new.html.haml
@@ -18,7 +18,7 @@
           .wrapper__back__content__middles__contents__info
             = "ポジション：#{@position}"
           .wrapper__back__content__middles__contents__info
-            = "投打：#{@position}"
+            = "投打：#{@throw}投#{@batting}打"
           .wrapper__back__content__middles__contents__info
             = "レベル：#{@player.level}"
       .wrapper__back__content__middles2
